--- a/.proj/Prison Life/.vscode/settings.json
+++ b/.proj/Prison Life/.vscode/settings.json
@@ -3,6 +3,7 @@
         "readfile",
         "isfolder",
         "makefolder",
-        "writefile"
+        "writefile",
+        "getgenv"
     ]
 }
